.runlogs/server.err.log
node:events:486
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use :::4000
    at Server.setupListenHandle [as _listen2] (node:net:1940:16)
    at listenInCluster (node:net:1997:12)
    at Server.listen (node:net:2102:7)
    at app.listen (F:\Mayank\PROJECTS\after_learning\ethara_ai_project\node_modules\express\lib\application.js:635:24)
    at start (file:///F:/Mayank/PROJECTS/after_learning/ethara_ai_project/server/src/index.js:15:7)
    at process.processTicksAndRejections (node:internal/process/task_queues:103:5)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1976:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:89:21) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '::',
  port: 4000
}

Node.js v24.12.0
file:///F:/Mayank/PROJECTS/after_learning/ethara_ai_project/server/src/index.js:8
async function start() {
      ^^^^^^^^

SyntaxError: Unexpected token 'function'
    at compileSourceTextModule (node:internal/modules/esm/utils:318:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:111:18)
    at #translate (node:internal/modules/esm/loader:473:20)
    at afterLoad (node:internal/modules/esm/loader:529:29)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:534:12)
    at #getOrCreateModuleJobAfterResolve (node:internal/modules/esm/loader:571:36)
    at afterResolve (node:internal/modules/esm/loader:624:52)
    at ModuleLoader.getOrCreateModuleJob (node:internal/modules/esm/loader:630:12)
    at onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:649:32)
    at TracingChannel.tracePromise (node:diagnostics_channel:350:14)

Node.js v24.12.0
